# Portafolio2

./: CMakeLists.txt  README.md
Ej1/: funcquit.c  funcquit.h
Ej2/: fsuper.c  fsuper.h
Ej3/: nforgn.c  nforgn.h
Ej4/: fschool.c  fschool.h
Ej5/: fleerstrng.c  fleerstrng.h  main.c
Ej7/: fpasswrd.c  fpasswrd.h  main.c
Ej8/: func.c  func.h
