cmake_minimum_required(VERSION 3.15)
project(PortafolioNo_2 C)

set(CMAKE_C_STANDARD 99)

add_executable(Ejercicio1 Ej1/funcquit.c Ej1/funcquit.h Ej4/fschool.c Ej4/fschool.h)
add_executable(Ejercicio3 Ej3/nforgn.c Ej3/nforgn.h)
add_executable(Ejercicio4 Ej4/fschool.c Ej4/fschool.h)
add_executable(Ejercicio5 Ej5/fleerstrng.c Ej5/fleerstrng.h Ej5/main.c)
add_executable(Ejercicio7 Ej7/fpasswrd.c Ej7/fpasswrd.h Ej7/main.c)
add_executable(Ejercicio2 Ej2/fsuper.c Ej2/fsuper.h)
add_executable(Ejercicio8 Ej8/func.c Ej8/func.h)